--- a/welltower-crm/package.json
+++ b/welltower-crm/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
     "react": "^17.0.2",
@@ -14,13 +15,18 @@
   "devDependencies": {
     "@tailwindcss/cli": "^4.1.18",
     "@tailwindcss/postcss": "^4.1.18",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "12.1.5",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
     "autoprefixer": "^10.4.23",
+    "jsdom": "22.1.0",
     "postcss": "^8.5.6",
     "tailwindcss": "4",
     "typescript": "^4.5.4",
-    "vite": "^2.8.0"
+    "vite": "^2.8.0",
+    "vitest": "0.34.6"
   }
 }
